--- a/src/app/main/products/products.component.html
+++ b/src/app/main/products/products.component.html
@@ -1,1 +1,11 @@
-<p>products works!</p>
+<h3>Products</h3>
+<div *ngIf="(products$ | async)!.length > 0; else noproducts ">
+  <ul>
+    <li *ngFor="let prod of (products$ | async)">
+      {{ prod.name }} - {{ prod.department}} - {{ prod.price }}
+    </li>
+  </ul>
+</div>
+<ng-template #noproducts>
+  <p>Nenhum produto foi encontrado</p>
+</ng-template>
