--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,22 +1,40 @@
 <mat-toolbar>
   <span>Login</span>
   <span class="example-spacer"></span>
-  <div>
-    <button mat-button routerLink="/auth/login">
-      <mat-icon class="mat-18">input</mat-icon>
-      Sign in
-    </button>
-    <button mat-button routerLink="/auth/register">
-      <mat-icon class="mat-18">person_add</mat-icon>
-      Sign up
-    </button>
-    <button mat-icon-button routerLink="/main/people">
-      <mat-icon class="mat-18">home</mat-icon>
-    </button>
-    <button mat-icon-button routerLink="/main/products">
-      <mat-icon class="mat-18">shop</mat-icon>
-    </button>
-  </div>
+
+    <ng-container *ngIf="!(authenticated$ | async)">
+      <button mat-button routerLink="/auth/login">
+        <mat-icon class="mat-18">input</mat-icon>
+        Sign in
+      </button>
+      <button mat-button routerLink="/auth/register">
+        <mat-icon class="mat-18">person_add</mat-icon>
+        Sign up
+      </button>
+    </ng-container>
+    <ng-container *ngIf="(authenticated$ | async) && (user$ | async)">
+      <button mat-icon-button routerLink="/main/people">
+        <mat-icon class="mat-18">home</mat-icon>
+      </button>
+      <button mat-icon-button routerLink="/main/products">
+        <mat-icon class="mat-18">shop</mat-icon>
+      </button>
+      <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu">
+        <mat-icon>account_circle</mat-icon>
+      </button>
+      <button mat-icon-button>
+        <mat-icon>exit_to_app</mat-icon>
+      </button>
+      <mat-menu #menu="matMenu">
+        <p class="username">{{(user$ | async)?.email }}</p>
+        <mat-divider></mat-divider>
+        <button mat-menu-item>
+          <mat-icon>exit_to_app</mat-icon>
+        </button>
+      </mat-menu>
+
+    </ng-container>
+
 </mat-toolbar>
 
 <router-outlet></router-outlet>
