refarotação do import de AuthModule e criação do auth.interceptor.ts

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,13 +22,13 @@
       <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu">
         <mat-icon>account_circle</mat-icon>
       </button>
-      <button mat-icon-button>
+      <button mat-icon-button (click)="logout()">
         <mat-icon>exit_to_app</mat-icon>
       </button>
       <mat-menu #menu="matMenu">
         <p class="username">{{(user$ | async)?.email }}</p>
         <mat-divider></mat-divider>
-        <button mat-menu-item>
+        <button mat-menu-item (click)="logout()">
           <mat-icon>exit_to_app</mat-icon>
         </button>
       </mat-menu>
