Criado uma progressbar na área de login, que será exibido enquanto carrega.

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -4,7 +4,7 @@
 
       <mat-card class="login-card mat-elevation-z8" >
           <mat-card-title>Login</mat-card-title>
-          <mat-card-content fxLayout="column" >
+          <mat-card-content fxLayout="column">
             <mat-form-field >
               <input matInput formControlName="email" type="email"
                   placeholder="E-mail" autocomplete="email" readonly="false">
@@ -15,12 +15,12 @@
             </mat-form-field>
           </mat-card-content>
           <mat-card-actions fxLayout="row" fxLayoutAlign="end center" >
-            <button mat-button color="primary" type="submit" [disabled]="!loginForm.valid">
+            <button mat-button color="primary" type="submit" [disabled]="!loginForm.valid" *ngIf="!loading">
               <mat-icon>check</mat-icon>
               Login
             </button>
           </mat-card-actions>
-
+          <mat-progress-bar *ngIf="loading" mode="indeterminate"></mat-progress-bar>
       </mat-card>
     </form>
 
